k8s/job/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sharing
  labels:
    type: ingress
    app: sharing-service
    kind: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: mongo-sharing-service
                port:
                  number: 80
            path: /
            pathType: Prefix
